--- a/JavaScript33/NameDrumKit/index-START.html
+++ b/JavaScript33/NameDrumKit/index-START.html
@@ -58,10 +58,28 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-    window.addEventListener('keydown', function(e){
+    //Separate playsound() from window listener
+    //window.addEventListener('keydown', function(e){
+    function playSound(e) {
         const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-        console.log(audio);
-    });
+        const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);//Get the specific key element K
+        //console.log(key);
+        if (!audio) {
+            return;
+        }
+        audio.currentTime = 0;//Set current time of this audio to 0
+        audio.play();
+        key.classList.add('playing');//Add a class to K's classlist to highlight K
+    }
+
+    function removeTransition(e) {
+        if (e.propertyName !== 'transform') return;
+        this.classList.remove('playing');// 'this' refers to the var calling the function removeTransition(e)
+    }
+    const keys = document.querySelectorAll('.key');
+    //Loop to add listener to each key
+    keys.forEach(key => key.addEventListener('transitionend', removeTransition));//Listen to transition end event
+    window.addEventListener('keydown', playSound);
 </script>
 
 
