--- a/JavaScript33/2Clock/index.html
+++ b/JavaScript33/2Clock/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JS + CSS Clock</title>
+  <title>Clock</title>
 </head>
 <body>
 
@@ -38,7 +38,7 @@
     .clock {
       width: 30rem;
       height: 30rem;
-      border:20px solid white;
+      border:20px solid black;
       border-radius:50%;
       margin:50px auto;
       position: relative;
@@ -58,18 +58,48 @@
     }
 
     .hand {
+      /*top and width refer to the location of hands*/
       width:50%;
+      top:50%;
+      /*height refers to the thickness of hands*/
       height:6px;
       background:black;
       position: absolute;
-      top:50%;
+      transform-origin: 100%;/*Move the transform center of the element to rightmost end*/
+      transform: rotate(90deg);/*Clockwise*/
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);/*Physical clicking feature*/
     }
 
   </style>
 
   <script>
+      //Grab the second, minute, hour hand
+      const secondHand = document.querySelector('.second-hand');
+      const minHand = document.querySelector('.min-hand');
+      const hourHand = document.querySelector('.hour-hand');
+      function setDate(){
+          const now = new Date();
+          /*Second hand*/
+          const seconds = now.getSeconds();//Get current time
+          //Transform current second to degree
+          const secondsDegrees = (seconds / 60) * 360 + 90;
+          //Add 90 to offset the initial anti clockwise 90
 
+          secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
 
+          /*Minute hand*/
+          const mins = now.getMinutes();
+          const minsDegrees = (mins / 60) * 360 + 90;
+          minHand.style.transform = `rotate(${minsDegrees}deg)`;
+          console.log(seconds);
+          /*Hour hand*/
+          const hours = now.getHours();
+          const hoursDegrees = (hours / 12) * 360 + 90;
+          hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+          console.log(seconds);
+      }
+      setInterval(setDate,1000);//Call the function every 1000 millisecond
   </script>
 </body>
 </html>
