--- a/JavaScript33/3PlayWithCssVariables&JS/index.html
+++ b/JavaScript33/3PlayWithCssVariables&JS/index.html
@@ -5,7 +5,7 @@
   <title>Scoped CSS Variables and JS</title>
 </head>
 <body>
-  <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
+  <h2><span class='hl'>Update CSS Variables with JS</span></h2>
 
   <div class="controls">
     <label for="spacing">Spacing:</label>
@@ -15,13 +15,33 @@
     <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
     <label for="base">Base Color</label>
+<!--      open default color picker -->
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="street%20car%20in%20SF.jpg" align="middle">
 
   <style>
+      :root{
+/*          Variables being updated*/
+          --base: #ef8100;
+          --spacing: 10px;
+          --blur: 10px;
+      }
 
+      img{
+          display: block;
+          width: 50%;
+          height: auto;
+          margin: auto;
+          padding: var(--spacing);
+          background: var(--base);
+          filter: blur(var(--blur));
+      }
+
+      .hl {
+          color: var(--base);
+      }
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -45,6 +65,19 @@
   </style>
 
   <script>
+      const inputs = document.querySelectorAll('.controls input');
+
+      function handleUpdate(){
+          //dataset is an object containing all the "data-" attributes from that element
+          //this below refers to 'input'
+          const suffix = this.dataset.sizing || '';//For color picker, there is no data-sizing
+          document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+          console.log(suffix);
+      }
+
+      inputs.forEach(input => input.addEventListener('change', handleUpdate));
+      //HOWEVER only the line above won't give the value while dragging. It only gives the value when stop dragging.
+      inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));//Now when moving value, function called
   </script>
 
 </body>
