--- a/JavaScript33/4Array1/index.html
+++ b/JavaScript33/4Array1/index.html
@@ -87,7 +87,18 @@
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const transportation = data.reduce((object, item) => {
+        if (!object[item]) {
+            object[item] = 0;
+        }
+        object[item]++;
+        console.log(item);
+        return object;
+    },
+    {
 
+    });
+    console.log(transportation);
   </script>
 </body>
 </html>
