--- a/JavaScript33/5FlexPanelGallery/index.html
+++ b/JavaScript33/5FlexPanelGallery/index.html
@@ -28,7 +28,7 @@
     }
 
     .panel {
-      background:#6B0F9C;
+      background:white;
       box-shadow:inset 0 0 0 5px rgba(255,255,255,0.1);
       color:white;
       text-align: center;
@@ -65,16 +65,20 @@
       width: 100%;
       transition:transform 0.5s;
       /*border helps show*/
-      border: 1px solid red;
+/*      border: 1px solid red;*/
       flex: 1 0 auto;
-      display: flex;
+      display: flex;/*Each p of panel1/2/3/4/5 becomes a flex element*/
       /*Put content at center of horizontal axis*/
       justify-content: center;
       /*Center at vertical axis*/
       align-items: center;
       /*Now at the very center*/
     }
-
+      /*Move upper and lower parts out of the screen. When the transform canceled, the parts become visible again*/
+      .panel > *:first-child{ transform: translateY(-100%); }
+      .panel.open-active > *:first-child{ transform: translateY(0); }/*Go back to initial place*/
+      .panel > *:last-child{ transform: translateY(100%); }
+      .panel.open-active > *:last-child{ transform: translateY(0); }
     .panel p {
       text-transform: uppercase;
       font-family: 'Amatic SC', cursive;
@@ -86,6 +90,9 @@
     }
 
     .panel.open {
+      /*When open, space is not evenly distrbuted, but expanded to 5*/
+      /*Adding and removing classes are enabled by javascript*/
+      flex: 5;
       font-size:40px;
     }
 
@@ -121,10 +128,21 @@
   </div>
 
   <script>
-
+      const fivePanel = document.querySelectorAll('.panel');/*listen to panel, not panelS*/
+      function toggleOpen() {
+          this.classList.toggle('open');
+      }
+      function toggleActive(e) { //Pass into event
+//          console.log(e.propertyName);
+          //Two transition happen
+          if (e.propertyName.includes('flex')) {
+              this.classList.toggle('open-active');
+          }
+//          this.classList.toggle('open-active');
+      }
+      fivePanel.forEach(panel => panel.addEventListener('click', toggleOpen));
+      fivePanel.forEach(panel => panel.addEventListener('transitionend', toggleActive));
   </script>
-
-
 
 </body>
 </html>
