--- a/JavaScript33/6TypeAhead/index.html
+++ b/JavaScript33/6TypeAhead/index.html
@@ -17,6 +17,27 @@
 <script>
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
 
+    const cities = [];
+    fetch(endpoint)
+        .then(blob => blob.json())/*Convert the data to jason before process it*/
+        .then(data => cities.push(...data));/*ES6 A LOT of objects in an array*/
+    function findMatches(wordToMatch, cities) {
+        return cities.filter(place => {
+            const regex = new RegExp(wordToMatch, 'gi');//'gi' is a flag meaning global and insensitive
+            return place.city.match(regex) || place.state.match(regex)//Return places having either city name or state name matched
+        });
+    }
+    function displayMatches() {
+        const matchArray = findMatches(this.value, cities);
+        console.log(matchArray);
+    }
+
+    const searchInput = document.querySelector('.search');
+    const suggestions = document.querySelector('.suggestions');
+
+    searchInput.addEventListener('change', displayMatches);
+    /*'change' only fire when the mouse moves away from the search bar and clicks somewhere other than search bar*/
+    searchInput.addEventListener('keyup', displayMatches);//now, as the key pressed and bouncing back, displayMatches fired
 </script>
   </body>
 </html>
