--- a/JavaScript33/6TypeAhead/index.html
+++ b/JavaScript33/6TypeAhead/index.html
@@ -30,10 +30,14 @@ const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb
     function displayMatches() {
         const matchArray = findMatches(this.value, cities);
         const html = matchArray.map(place => {
+            //Create a regx to replace the matched word
+            const regex  = new RegExp(this.value, 'gi');
+            const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`);
+            const stateName = place.state.replace(regex, `<span class="hl">${this.value}</span>`);
             //position of the dot below is critical
             return `
                 <li>
-                    <span class="name">${place.city}, ${place.state}</span>
+                    <span class="name">${cityName}, ${stateName}</span>
                     <span class="population">${place.population}</span>
                 </li>
             `;
