--- a/JavaScript33/8Canvas/index.html
+++ b/JavaScript33/8Canvas/index.html
@@ -17,6 +17,7 @@
     ctx.strokeStyle = '#BADA55';
     //create rounded corner when 2 line meet
     ctx.lineJoin = 'round';
+    ctx.lineCap = 'round';
     //set current line width to
     ctx.lineWidth = 100;
 
@@ -25,14 +26,27 @@
     //coordinate of the stroke
     let lastX = 0;
     let lastY = 0;
-
+    let hue = 0;
     function draw(e) {
-        if (!isDrawing) return;
-        console.log(e);
+        if (!isDrawing) return;//stop the function when mouse up
+        //A path begins, a path not necessarily created or drawn
+        ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
+        ctx.beginPath();
+        //A path starts from where the mouse clicked down
+        ctx.moveTo(lastX, lastY);
+        //A path ends at where the mouse stops
+        ctx.lineTo(e.offsetX, e.offsetY);
+        //To actually create a line
+        ctx.stroke();
+        [lastX, lastY] = [e.offsetX, e.offsetY];
+        hue++;
     }
     canvas.addEventListener('mousemove', draw);
     //mouse clicked down, begin drawing
-    canvas.addEventListener('mousedown', () => isDrawing = true);
+    canvas.addEventListener('mousedown', (e) => {
+        isDrawing = true;
+        [lastX, lastY] = [e.offsetX, e.offsetY];
+    });
     //mouse up, stop drawing
     canvas.addEventListener('mouseup', () => isDrawing = false);
     //mouse out of screen, stop
