4. {conditional class object: booleanVar} and [array of class object]

--- a/LearnVueJs/InteractWithDOM/styling.html
+++ b/LearnVueJs/InteractWithDOM/styling.html
@@ -1,4 +1,4 @@
-<script src="https://npmcdn.com/vue/dist/vue.js"></script>
+<script src="https://unpkg.com/vue"></script>
 
 <style>
     #effect {
@@ -50,9 +50,10 @@
   </div>
   <!-- 4) Let the user enter a class and enter true/ false for another class (create some example classes) and attach the classes -->
   <div>
-    <input type="text">
-    <input type="text">
-    <div></div>
+    <input type="text" v-model="userClass">
+    <input type="text" v-model="isVisible">
+    <div v-bind:class="[{visible: isVisible}, userClass]"></div>
+    <p>{{isVisible}}</p>
   </div>
   <!-- 5) Repeat 3) but now with values for styles (instead of class names). Attach the respective styles.  -->
   <div>
@@ -75,8 +76,8 @@
                 shrink: true
             },
             floatClassObject: 'float',
-            userClass: ''
-
+            userClass: '',
+            isVisible: false
     },
     methods: {
         startEffect: function() {
