--- a/LearnVueJs/InteractWithDOM/styling.html
+++ b/LearnVueJs/InteractWithDOM/styling.html
@@ -57,8 +57,9 @@
   </div>
   <!-- 5) Repeat 3) but now with values for styles (instead of class names). Attach the respective styles.  -->
   <div>
+    <p>Exercise 5 below</p>
     <input type="text">
-    <div></div>
+    <div v-bind:style="myStyle"></div>
   </div>
   <!-- 6) Create a simple progress bar with setInterval and style bindings. Start it by hitting the below button. -->
   <div>
@@ -77,7 +78,12 @@
             },
             floatClassObject: 'float',
             userClass: '',
-            isVisible: false
+            isVisible: false,
+            myStyle: {
+                width: '100px',
+                height: '150px',
+                'background-color': 'gray'
+            }
     },
     methods: {
         startEffect: function() {
