use template and v-if to conditionally output certain entries of an array

--- a/LearnVueJs/ConditionalRendering/conditionalRendering&Lists.html
+++ b/LearnVueJs/ConditionalRendering/conditionalRendering&Lists.html
@@ -25,8 +25,13 @@
   </ul>
   <!-- 4) Print the following object (only the values) and also create a nested loop for the array: {name: 'TESTOBJECT', data: [1.67, 1.33, 0.98, 2.21]} (hint: use v-for and v-if to achieve this) -->
   <ul>
-    <li>
-
+    <li v-for="value in testData">
+        <template v-if="Array.isArray(value)">
+            <div v-for="element in value">{{element}}</div>
+        </template>
+        <template v-else>
+            {{ value }}
+        </template>
     </li>
   </ul>
 </div>
