use v-if v-else to show either "start game" or game mechanic buttons

--- a/LearnVueJs/TheMonsterSlayer/index.html
+++ b/LearnVueJs/TheMonsterSlayer/index.html
@@ -32,12 +32,12 @@
         </div>
     </section>
     <section class="row controls">
-        <div class="small-12 columns">
+        <div class="small-12 columns" v-if="!gameIsRunning">
             <button id="start-game">START NEW GAME</button>
         </div>
     </section>
-    <section class="row controls">
-        <div class="small-12 columns">
+    <section class="row controls" v-else>
+        <div class="small-12 columns" >
             <button id="attack">ATTACK</button>
             <button id="special-attack">SPECIAL ATTACK</button>
             <button id="heal">HEAL</button>
