add eventlistener to button "start game" so buttons switch when "start game" pressed

--- a/LearnVueJs/TheMonsterSlayer/index.html
+++ b/LearnVueJs/TheMonsterSlayer/index.html
@@ -31,9 +31,9 @@
             </div>
         </div>
     </section>
-    <section class="row controls">
-        <div class="small-12 columns" v-if="!gameIsRunning">
-            <button id="start-game">START NEW GAME</button>
+    <section class="row controls" v-if="!gameIsRunning">
+        <div class="small-12 columns">
+            <button id="start-game" @click="startGame">START NEW GAME</button>
         </div>
     </section>
     <section class="row controls" v-else>
